# soriza-startup-layer

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  justfile  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: cd-design-gate.md  competitor-steelman.md  customer-discovery-bias-check.md  customer-discovery-design-worker.md  customer-discovery-personas-worker.md  disconfirmation-judge.md  fmf-screen.md  ledger-reader.md  ledger-writer.md  market-researcher.md  objection-lens.md  seed-generator.md  sharpen-gate.md  solution-red-team.md  startup-idea-researcher.md
.claude/hooks/: README.md  citation_density_check.py  deprecated_redirect.py  gates_guard.py  persona_contract_check.py  resume_inject.py  run_log.py  schema_on_write.py  stop_guard.py  write_path_guard.py
.claude/memory/: MEMORY.md  ai-persona-adult-gfe-banned.md  idea-funnel-bg-isolation-write-block.md  idea-funnel-ratelimit-fragility.md  idea-funnel-subagent-schema-prose-conflict.md  skill-listing-budget.md  soriza-brand-not-beauty-domain.md
.claude/skills-archive/: README.md
.claude/workflows/: artifact-eval.js  description-optimize.js  idea-funnel-engine.js
docs/: founder-dossier.md  founder-profile.md  loop-engineering-reference-en.md
docs/adr/: 0001-funnel-kills-on-evidence-not-debate.md  (+3 more)
ideas/: ACTIVE  CLAUDE.md
reports/: calibration.md  dashboard.md  ledger-audit.md
scripts/: advance_gate.py  build_delta_ledger.py  calibration_review.py  ledger_audit.py  lock_criteria.py  make_brief.py  new_idea.py  render_dashboard.py
tests/: conftest.py
(+439 files in other folders)
